[package]
name = "ghost_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9"

# `cargo build` profile
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# `cargo build --release` profile
[profile.release]
panic = "abort" # disable stack unwinding on panic

